force-app/main/default/objects/C360_CapacityHistorical__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <referenceTo>C360_Capacity__c</referenceTo>
        <relationshipLabel>Capacity Historical</relationshipLabel>
        <relationshipName>Capacity_Historical</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per year</fullName>
                </value>
                <value>
                    <fullName>Per month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalRequirement__c</fullName>
        <label>Total Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitConversion__c</fullName>
        <label>Unit Conversion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <label>Capacity Historical</label>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Historical Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>